kubernetes/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      serviceAccountName: jellyfin
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1028
        runAsGroup: 100
        fsGroup: 100
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 105
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 512Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /cache
            - name: data-nfs
              mountPath: /nfs/data/03_media/01_movies
              subPath: 03_media/01_movies
              readOnly: true
            - name: data-nfs
              mountPath: /nfs/data/03_media/02_tv
              subPath: 03_media/02_tv
              readOnly: true
            - name: intel-igpu
              mountPath: /dev/dri/renderD128
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: data-nfs
          persistentVolumeClaim:
            claimName: data-nfs-pvc
        - name: intel-igpu
          hostPath:
            path: /dev/dri/renderD128
      nodeSelector:
        intel-igpu: "true"
