kubernetes/apps/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`jellyfin.home.lungoo.de`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
